[package]
name = "daw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Always included — these are WASM-compatible and form the core API
daw-proto = { path = "../daw-proto" }
daw-control = { path = "../daw-control" }
daw-module = { path = "../daw-module" }

# UI host adapter (REAPER + Dioxus). Pulled in only when the `reaper-ui`
# feature is enabled — keeps audio-graph / WASM / embedded targets clean.
daw-reaper-dioxus = { path = "../daw-reaper-dioxus", optional = true }

# Runtime (needed for block_on in plugin context)
tokio.workspace = true
tracing.workspace = true

# Feature-gated internal crates
daw-control-sync = { path = "../daw-control-sync", optional = true }
daw-reaper = { path = "../daw-reaper", optional = true }
daw-standalone = { path = "../daw-standalone", optional = true }
dawfile-reaper = { path = "../dawfile-reaper", optional = true }
dawfile-ableton = { path = "../dawfile-ableton", optional = true }

[features]
sync = ["dep:daw-control-sync"]
reaper = ["dep:daw-reaper"]
standalone = ["dep:daw-standalone"]
standalone-audio = ["standalone", "daw-standalone/audio"]
standalone-rpp = ["standalone-audio", "daw-standalone/rpp-loader"]
file = ["dep:dawfile-reaper", "dep:dawfile-ableton"]
reaper-ui = ["dep:daw-reaper-dioxus"]
