[package]
name = "dawfile-aaf"
version = "0.1.0"
edition = "2024"
description = "AAF (Advanced Authoring Format) session file parser — pure Rust, no C dependencies"
license = "MIT OR Apache-2.0"

[dependencies]
# Compound File Binary (CFB / OLE Structured Storage) container layer.
# AAF files use CFB as their container format (SMPTE 429-12M).
cfb = "0.10"

thiserror = { workspace = true }

# Domain types for conversion to daw-proto
daw-proto = { path = "../daw-proto" }

[dev-dependencies]

[lints]
workspace = true
