[package]
name = "dawfile-dawproject"
version = "0.1.0"
edition = "2024"
description = "DawProject file parser (.dawproject) — open exchange format by Bitwig"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }

# Domain types for conversion to daw-proto
daw-proto = { path = "../daw-proto" }

# Fast, zero-allocation XML DOM parser
roxmltree = "0.20"

# ZIP archive extraction (.dawproject files are ZIP containers)
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
daw-proto = { path = "../daw-proto" }

[lints]
workspace = true
