[package]
name = "dawfile-logic"
version = "0.1.0"
edition = "2024"
description = "Logic Pro session file parser (.logicx) — pure Rust, no C dependencies"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }
daw-proto = { path = "../daw-proto" }

# Binary plist parsing (Logic uses bplist00 throughout)
plist = "1"

[dev-dependencies]

[lints]
workspace = true
