[package]
name = "dawfile-reaper"
version = "0.1.0"
edition = "2021"
description = "REAPER file parser for DawFile built on the RPP/RPPXML format"
license = "MIT"


[dependencies]
# Parser dependencies
nom = "8"
libc = "0.2"

# Domain types for conversion
daw-proto = { workspace = true }

# Common workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_perf"
harness = false

[lints]
workspace = true
